third_party/move/move-compiler-v2/tests/ability-check/v1-typing/constraints_not_satisfied_lvalues_decl_type.move
module 0x8675309::M {
    struct CupC<T: copy> { f: T }
    struct R {}

    fun foo() {
        let _x: CupC<R>;
    }

}
